--- a/index.html
+++ b/index.html
@@ -1,58 +1,17 @@
-// script.js
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Malla Tecnología Médica</title>
+  <link rel="stylesheet" href="estilos.css" />
+</head>
+<body>
+  <h1>Malla Curricular - Tecnología Médica</h1>
+  <div id="malla" class="grid-container">
+    <!-- Los botones de ramos serán insertados desde JavaScript -->
+  </div>
 
-const ramos = [
-  { id: 'r1', nombre: 'Principios Matemáticos', requisitos: [] },
-  { id: 'r2', nombre: 'Biología Celular', requisitos: [] },
-  { id: 'r3', nombre: 'Fundamentos en Bioquímica', requisitos: ['r2'] },
-  { id: 'r4', nombre: 'Fisiología', requisitos: ['r2'] },
-  { id: 'r5', nombre: 'Fisiopatología', requisitos: ['r4'] },
-  { id: 'r6', nombre: 'Bioquímica Clínica I', requisitos: ['r3'] },
-  { id: 'r7', nombre: 'Bioquímica Clínica II', requisitos: ['r6'] },
-  { id: 'r8', nombre: 'Microbiología Básica', requisitos: ['r2'] },
-  { id: 'r9', nombre: 'Microbiología Clínica', requisitos: ['r8'] },
-  { id: 'r10', nombre: 'Parasitología Clínica', requisitos: ['r8'] },
-  { id: 'r11', nombre: 'Hematología Básica', requisitos: ['r3'] },
-  { id: 'r12', nombre: 'Hematología Clínica', requisitos: ['r11'] },
-  { id: 'r13', nombre: 'Inmunología Básica', requisitos: [] },
-  { id: 'r14', nombre: 'Inmunología Clínica', requisitos: ['r13'] },
-  { id: 'r15', nombre: 'Inmunohematología', requisitos: ['r14'] },
-  { id: 'r16', nombre: 'Medicina Transfusional', requisitos: ['r15'] },
-];
-
-const container = document.getElementById('malla');
-
-function createRamo(ramo) {
-  const div = document.createElement('div');
-  div.classList.add('ramo');
-  div.id = ramo.id;
-  div.textContent = ramo.nombre;
-
-  if (ramo.requisitos.length > 0) {
-    div.classList.add('locked');
-  }
-
-  div.addEventListener('click', () => {
-    if (!div.classList.contains('locked')) {
-      div.classList.toggle('approved');
-      actualizarEstado();
-    }
-  });
-
-  return div;
-}
-
-function actualizarEstado() {
-  ramos.forEach(ramo => {
-    const div = document.getElementById(ramo.id);
-    if (ramo.requisitos.every(id => document.getElementById(id).classList.contains('approved'))) {
-      div.classList.remove('locked');
-    } else if (!div.classList.contains('approved')) {
-      div.classList.add('locked');
-    }
-  });
-}
-
-// Inicialización
-ramos.forEach(r => container.appendChild(createRamo(r)));
-actualizarEstado();
-
+  <script src="script.js"></script>
+</body>
+</html>
