--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Malla curricular interactiva de Tecnología Médica">
+  <meta name="author" content="Tu nombre o institución">
   <title>Malla Tecnología Médica</title>
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
-  <h1>Malla Curricular - Tecnología Médica</h1>
-  <div id="malla" class="grid-container">
-    <!-- Los botones de ramos serán insertados desde JavaScript -->
-  </div>
+  <header>
+    <h1>Malla Curricular - Tecnología Médica</h1>
+    <button id="resetButton" class="reset-button">Reiniciar Malla</button>
+  </header>
+
+  <main>
+    <div id="malla" class="grid-container">
+      <!-- Los botones de ramos serán insertados desde JavaScript -->
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Carrera de Tecnología Médica | Universidad XYZ</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
